[tool.poetry]
name = "tic-tac-toe-api"
version = "0.1.0"
description = ""
authors = ["Renan Santana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
